# RTOS

STM32/: CMakeLists.txt  GEMINI.md  hints.md  mark.md  tasks.md
STM32/App/Src/: app_main.c
STM32/Config/: FreeRTOSConfig.h
STM32/Core/Inc/: main.h  stm32f1xx_hal_conf.h
STM32/Core/Src/: main.c
STM32/cmake/: arm-none-eabi.cmake
